--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -287,7 +287,7 @@
                                                     <th>Employee<b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Expense <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Payroll <b style="color:rgb(128, 0, 0)"> (-)</b></th>
-                                                    <th>Supplier</th>
+                                                    <th>Supplier <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Fitter <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Doctor <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Deposit<b style="color:green"> (+)</b></th>
