--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -14,7 +14,7 @@
                         </div>
                         <mat-tab-group>
                             <!-- Petty Cash Report  -->
-                            <mat-tab label="Petty Cash Report">
+                            <mat-tab label="PettyCash/CashCounter Report">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm">
                                         <div class="row">
