--- a/server/views/arihantPowerPdf.ejs
+++ b/server/views/arihantPowerPdf.ejs
@@ -328,7 +328,7 @@
 
          <tr>
             <th>Total:-</th>
-            <th><%=data.billMaster.TotalAmount %></th>
+            <th><%=data.billMaster.TotalAmount + data.billMaster.DiscountAmount %></th>
          </tr>
          <tr>
             <th>Discount:-</th>
