--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -277,12 +277,12 @@
   </div>
   <!-- model detail-->
 <ng-template #content1 role="document" let-modal>
-  <div class="modal-header p-2 row" style="height: 50px;">
+  <div class="modal-header p-0 pe-2 ps-2 row" style="height: 50px;">
      <div class="col-3">
        <h2 class="modal-title header pt-2" id="exampleModalLabel">Search</h2>
      </div>
      <div class="col-7 mx-auto">
-      <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="search">
+      <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Page Search" style="height: 30px;">
      </div>
      <div class="col-1 ml-auto">
       <button type="button" style="font-size: 25px;" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
@@ -291,7 +291,7 @@
     
  
   </div>
-  <div class="modal-body p-3" style="overflow: auto; height: 250px;">
+  <div class="modal-body p-3" style="overflow: auto; height: 250px;background-image: linear-gradient(313deg, #ff793b 10%, transparent 12%);">
     <div class="row">
       <div class="col-12 searchTextM">
         <ul *ngFor="let hero of heroes | filter:searchText" style="line-height: 30px;">
