--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -955,7 +955,7 @@
 
       
                   <!-- product-quantity-grid.component.html -->
-                  <div *ngIf="item.ProductName != 'Sv' " class="row ms-3">
+                  <div *ngIf="axisAddEyeShow == true" class="row ms-3">
                     <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Axis</mat-label>
