--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -177,6 +177,7 @@
               <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a> 
               <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/GST-filling']" id="collapseExample7">GST Filling</a> 
               <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/petty-cash']" id="collapseExample7">Petty-Cash</a> 
+              <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/reward']" id="collapseExample7">Reward</a> 
 
             </div>
           </div>
