--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1653,8 +1653,8 @@
                             <ng-template #customer role="document" let-modal>
                                 <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
                                     <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Extra Fields
-                                        <span class="ms-md-5 me-md-5 ms-0 pe-5 pt-3 pt-md-0">Cust_ID - <b
-                                                style="color:#000;">{{this.data.Idd}}</b> </span>
+                                        <span class="ms-md-5 me-md-5 ms-0 pe-5 pt-3 pt-md-0">Reward Balance <b
+                                                style="color:#000;">{{this.rewardBalance}}</b> </span>
                                         <span class="ms-5 me-5 pt-3 pt-md-0">Cust_Category - <b  style="color:#000;">{{this.data.Category}}</b></span>
                                     </h2>
                                     <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
