--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -85,6 +85,7 @@
                           <th class="text-left">MobileNo2</th>
                           <th class="text-left">PhoneNo</th>
                           <th class="text-left">Address</th>
+                          <th class="text-left">RewardBalance</th>
                           <th class="text-left">Date</th>
                           <th class="text-left">Email</th>
                           <th class="text-left">DOB</th>
@@ -116,6 +117,7 @@
                           <td class="text-left">{{data.MobileNo2}} </td>
                           <td class="text-left">{{data.PhoneNo}} </td>
                           <td class="text-left">{{data.Address}} </td>
+                          <td class="text-left">{{data.rewardBalance}} </td>
                           <td class="text-left">{{dateFormat(data.VisitDate)}} </td>
                           <td class="text-left">{{data.Email}} </td>
                           <td class="text-left">{{dateFormat(data.DOB)}}</td>
