--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -958,6 +958,8 @@
                         [disabled]="BillMaster.ID === null && !f2.valid" (click)="update()">Update</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
+                    <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
+                        [disabled]="BillMaster.ID === null" (click)="openModal5(content5)">Reward</button>
                     <button  type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Lens Order</button>
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
@@ -1320,6 +1322,155 @@
                 <div class="col-xl-2 col-lg-2 col-md-2 col-4">
                     <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0"
                         mat-raised-button color="primary">Apply Payment</button>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
+                    <button (click)="CreditNotePdf()" [disabled]="applyPayment.CustomerCredit === 0" type="button"
+                        mat-raised-button color="primary">
+                        Credit Note
+                    </button>
+                    <button *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="CreditPDF == ''" (click)="sendWhatsapp('credit')" class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp"></i></button>
+                    <button class="email"><i class="fa-solid fa-envelope"></i></button>
+                </div>
+            </div>
+        </form>
+        <div class="row mt-3">
+            <div class="col-lg-5 col-md-5 col-12">
+                <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+                    <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important; margin: 0; overflow-y: scroll; max-height: 150px;">
+                        <thead>
+                            <tr>
+                                <th style="background-color: #ff5100; color: #fff !important;">Invoice No</th>
+                                <th>Bill Amount</th>
+                                <th>Due Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="text-center" *ngFor="let inv of invoiceList; let i = index;">
+                                <td class="text-left" style="background-color: #ff5100; color: #fff;">{{inv.InvoiceNo}}
+                                </td>
+                                <td class="text-left">{{inv.TotalAmount |
+                                    currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
+                                </td>
+                                <td class="text-left">{{inv.DueAmount |
+                                    currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
+                                </td>
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-7 col-12 mt-5 mt-md-0 ms-auto">
+                <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+                    <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important; margin: 0; ">
+                        <thead>
+                            <tr>
+                                <th>PaymentDate</th>
+                                <th>PaymentMode</th>
+                                <th>CardNo</th>
+                                <th>ReferenceNo</th>
+                                <th style="background-color: #ff5100; color: #fff !important;">PaidAmount</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr style="white-space:nowrap;" class="text-center"
+                                *ngFor="let paid of paidList; let i = index;">
+                                <td class="text-left">{{dateFormat(paid.PaymentDate)}}</td>
+                                <td class="text-left">{{paid.PaymentMode}}</td>
+                                <td class="text-left">{{paid.CardNo}}</td>
+                                <td class="text-left">{{paid.PaymentReferenceNo}}</td>
+                                <td class="text-left" style="background-color: #ff5100; color: #fff;"> {{ paid.Type ===
+                                    'Debit' ? '-' + paid.Amount : '+' + paid.Amount |
+                                    currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
+                                </td>
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
+<!-- reward -->
+<ng-template #content5 role="document" let-modal>
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+        <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Reward Payment</h3>
+        <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <form #f3="ngForm" (ngSubmit)="onPaymentSubmit()">
+            <div class="row">
+                <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
+                        <input class="redclass" type="number" min="0" style="color: rgb(255 0 0 / 75%) !important;"
+                            matInput name="Total Amount" value="{{ this.applyReward.PayableAmount}}" disabled
+                            #TOutstandingcontrol [autocomplete]="false">
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0" >
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Reward Type</mat-label>
+                    <mat-select name="RewardType" [(ngModel)]="applyReward.RewardType"  (selectionChange)="RewardType()" required #RewardTypecontrol1 >
+                        <mat-option value="Self">Self</mat-option>
+                        <mat-option value="referral">referral </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+            <div *ngIf="applyReward.RewardType == 'referral'" class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+            <mat-form-field class="example-full-width">
+                <mat-label>Payee Name</mat-label>
+                <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                name="PayeeID"  [formControl]="myControl1" [matAutocomplete]="auto1"
+                       (input)="customerSearch(myControl1.value, 'Name',applyReward.CustomerID)" required>
+                <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" >
+                  <mat-option (click)="CustomerSelection('All','0')" value=''></mat-option>
+                  <mat-option (click)="CustomerSelection('data',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                    {{option.Name}} {{option.MobileNo1}}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>RewardBalance</mat-label>
+                        <input type="number" min="0" style="font-size: 17px !important;" matInput name="RewardBalance"
+                            [(ngModel)]="applyReward.RewardBalance" [autocomplete]="false">
+                    </mat-form-field>
+                </div>
+               
+             
+             
+                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label> Card No.</mat-label>
+                        <input style="font-size: 17px !important;" matInput name="CardNo"
+                            [(ngModel)]="applyReward.CardNo" #CardNocontrol [autocomplete]="false">
+                        <mat-error>
+                            Card No. is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Reference</mat-label>
+                        <input style="font-size: 17px !important;" matInput name="NamePay"
+                            [(ngModel)]="applyReward.PaymentReferenceNo" #NamePaycontrol [autocomplete]="false">
+                        <mat-error>
+                            Name is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+          
+                <div class="col-xl-2 col-lg-2 col-md-2 col-4">
+                    <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0"
+                        mat-raised-button color="primary">Apply Reward</button>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
                     <button (click)="CreditNotePdf()" [disabled]="applyPayment.CustomerCredit === 0" type="button"
