--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1417,7 +1417,7 @@
                     <mat-label>Reward Type</mat-label>
                     <mat-select name="RewardType" [(ngModel)]="applyReward.RewardType"  (selectionChange)="RewardType()" required #RewardTypecontrol1 >
                         <mat-option value="Self">Self</mat-option>
-                        <mat-option value="referral">referral </mat-option>
+                        <mat-option value="referral">Referral </mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -1460,14 +1460,24 @@
                             [(ngModel)]="applyReward.PaidAmount" [autocomplete]="false">
                     </mat-form-field>
                 </div>
+
+                <div *ngIf="applyReward.RewardType === 'referral'" class="col-xl-1 col-lg-2 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>OTP</mat-label>
+                        <input type="number" min="0" style="font-size: 17px !important;" matInput name="Otp"
+                            [(ngModel)]="applyReward.Otp" [autocomplete]="false">
+                    </mat-form-field>
+                </div>
              
-          
-                <div class="col-xl-4 col-lg-2 col-md-2 col-4">
-                    <button type="submit" [disabled]="f7.invalid || this.applyReward.PaymentMode === 0"
-                        mat-raised-button color="primary">Apply Reward</button>
-                    <button type="submit" [disabled]="f7.invalid || this.applyReward.PaymentMode === 0"
+                <div *ngIf="applyReward.RewardType === 'referral'" class="col-xl-2 col-lg-2 col-md-2 col-4">
+                    <button   [disabled]="f7.invalid || this.applyReward.PaymentMode === 0"
                         mat-raised-button color="primary" (click)="sendOtpForAppliedReward()">Send Otp</button>
                 </div>
+                <div class="col-xl-2 col-lg-2 col-md-2 col-4">
+                    <button  [disabled]="f7.invalid || this.applyReward.PaymentMode === 0"
+                        mat-raised-button color="primary">Apply Reward</button>
+                </div>
+                
                 <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
                     <!-- <button (click)="CreditNotePdf()" [disabled]="applyPayment.CustomerCredit === 0" type="button"
                         mat-raised-button color="primary">
