--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -12,76 +12,97 @@
                             </div>
                         </div>
                         <div class="body">
-                            <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCashReport()">
-                                <div class="row">
-                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
-                                        <mat-form-field class="example-full-width mb-0">
-                                            <mat-label>From</mat-label>
-                                            <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #FromDatecontrol [disabled]="!editCashCollectionReport" />
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
-                                        <mat-form-field class="example-full-width mb-0">
-                                            <mat-label>To</mat-label>
-                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate"
-                                                [disabled]="!editCashCollectionReport" />
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                        <mat-form-field class="example-full-width mb-0"
-                                            *ngIf="user.UserGroup === 'CompanyAdmin'">
-                                            <mat-label>ShopName</mat-label>
-                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
-                                                <mat-option [value]=0>All</mat-option>
-                                                <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
-                                                    <span [style.color]="'blue'"
-                                                        *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                        <mat-form-field class="example-full-width mb-0"
-                                            *ngIf="user.UserGroup !== 'CompanyAdmin'">
-                                            <mat-label>ShopName</mat-label>
-                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID">
-                                                <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
-                                                    <span [style.color]="'blue'"
-                                                        *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                        <mat-form-field class="example-full-width mb-0">
-                                            <mat-label>Payment Mode</mat-label>
-                                            <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
-                                                #GSTTypecontrol1>
-                                                <mat-option [value]=0>All</mat-option>
-                                                <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList">
-                                                    {{p.Name}} </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                        <mat-form-field class="example-full-width mb-0">
-                                            <mat-label>Payment Status</mat-label>
-                                            <mat-select name="PaymentStatus" [(ngModel)]="data.PaymentStatus">
-                                                <mat-option [value]=0>All</mat-option>
-                                                <mat-option value="Paid">Paid(Deliverd)</mat-option>
-                                                <mat-option value="Unpaid">Unpaid(Pending)</mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                        <button class="me-2" type="submit" mat-raised-button color="primary">
-                                            Search
-                                        </button>
-                                        <button type="button" mat-raised-button color="warn" (click)="FromReset()">
-                                            Reset
-                                        </button>
-                                    </div>
+                            <div class="row">
+                                <div class="col-10">
+                                    <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCashReport()">
+                                        <div class="row">
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From</mat-label>
+                                                    <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
+                                                        #FromDatecontrol [disabled]="!editCashCollectionReport" />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>To</mat-label>
+                                                    <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate"
+                                                        [disabled]="!editCashCollectionReport" />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                                    <mat-label>ShopName</mat-label>
+                                                    <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                                    <mat-label>ShopName</mat-label>
+                                                    <mat-select name="ShopID" [(ngModel)]="data.ShopID">
+                                                        <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Payment Mode</mat-label>
+                                                    <mat-select name="PayMode" [(ngModel)]="data.PaymentMode" required
+                                                        #GSTTypecontrol1>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList">
+                                                            {{p.Name}} </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Payment Status</mat-label>
+                                                    <mat-select name="PaymentStatus" [(ngModel)]="data.PaymentStatus">
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option value="Paid">Paid(Deliverd)</mat-option>
+                                                        <mat-option value="Unpaid">Unpaid(Pending)</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <button class="me-2" type="submit" mat-raised-button color="primary">
+                                                    Search
+                                                </button>
+                                                <button type="button" mat-raised-button color="warn" (click)="FromReset()">
+                                                    Reset
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
-                            </form>
+                                <div class="col-2">
+                                         <table class="totaclsEC" style="width: 95%;">
+                                            <tr>
+                                               <th style="font-size: 15px;">Total Cash</th> 
+                                               <th> <span style="font-size: 18px; color:red">{{(this.totalCash).toFixed(2)}} </span> </th> 
+                                            </tr>
+                                            <tr>
+                                                <th style="font-size: 15px;">Total Expense </th>
+                                                <th> <span style="font-size: 18px; color:red">{{this.totalExpense}} </span> </th>
+                                            </tr>
+                                            <tr>
+                                               <th style="font-size: 15px;">Cash In Hand </th>
+                                                <th> <span style="font-size: 18px; color:red">{{(this.totalCash - this.totalExpense).toFixed(2)}} </span></th>
+                                           </tr>
+                                         </table>
+                                </div>
+                            </div>
+                          
                             <!--  list -->
                             <div class="body p-2" >
                                 <div id="print-content" class="col-sm-12" style="overflow: auto; height: 450px;">
