--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -88,16 +88,16 @@
                                 <div class="col-2">
                                          <table class="totaclsEC" style="width: 95%;">
                                             <tr>
-                                               <th style="font-size: 15px;">Total Cash</th> 
-                                               <th> <span style="font-size: 18px; color:red">{{(this.totalCash).toFixed(2)}} </span> </th> 
+                                               <th style="font-size: 15px;">Total Collection</th> 
+                                               <th> <span style="font-size: 18px; color:red">{{(this.totalAmount).toFixed(2)}} </span> </th> 
                                             </tr>
                                             <tr>
                                                 <th style="font-size: 15px;">Total Expense </th>
                                                 <th> <span style="font-size: 18px; color:red">{{this.totalExpense}} </span> </th>
                                             </tr>
                                             <tr>
-                                               <th style="font-size: 15px;">Cash In Hand </th>
-                                                <th> <span style="font-size: 18px; color:red">{{(this.totalCash - this.totalExpense).toFixed(2)}} </span></th>
+                                               <th style="font-size: 15px;">Total Amonut </th>
+                                                <th> <span style="font-size: 18px; color:red">{{(this.totalAmount - this.totalExpense).toFixed(2)}} </span></th>
                                            </tr>
                                          </table>
                                 </div>
