--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -81,7 +81,7 @@
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>Product Name</mat-label>
-                                            <input matInput name="stringProductName" [(ngModel)]="data1.Productsearch" (ngModelChange)="data1.stringProductName = onChange($event)" #stringProductNamecontrol>
+                                            <input matInput name="Productsearch" [(ngModel)]="Productsearch" (ngModelChange)="data1.Productsearch = onChange($event)" #stringProductNamecontrol>
                                             <mat-error>
                                                 Barcode required
                                             </mat-error>
