--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -264,10 +264,10 @@
                     </td>
                     <td *ngIf="!data.UpdateMode" class="text-center">{{data.PaymentMode}} </td>
                     <td
-                      *ngIf="(data.UpdateMode && data.PaymentMode === 'Customer Credit' )|| (data.UpdateMode && data.PaymentMode === 'Payment Initiated') || (data.UpdateMode && data.PaymentMode === 'Old Software Payment') || (data.UpdateMode && data.PaymentMode === 'Customer Return')"
+                      *ngIf="(data.UpdateMode && data.PaymentMode === 'Customer Credit' )|| (data.UpdateMode && data.PaymentMode === 'Payment Initiated') || (data.UpdateMode && data.PaymentMode === 'Old Software Payment') || (data.UpdateMode && data.PaymentMode === 'Customer Return') || (data.UpdateMode && data.PaymentMode === 'Customer Reward') || (data.UpdateMode && data.PaymentMode === 'AMOUNT RETURN')"
                       class="text-center">{{data.PaymentMode}}</td>
                     <td
-                      *ngIf="(data.UpdateMode && data.PaymentMode !== 'Customer Credit' && data.PaymentMode !== 'Payment Initiated' && data.PaymentMode !== 'Old Software Payment' && data.PaymentMode !== 'Customer Return')"
+                      *ngIf="(data.UpdateMode && data.PaymentMode !== 'Customer Credit' && data.PaymentMode !== 'Payment Initiated' && data.PaymentMode !== 'Old Software Payment' && data.PaymentMode !== 'Customer Return' && data.PaymentMode !== 'AMOUNT RETURN' && data.PaymentMode !== 'Customer Reward')"
                       style=" text-align: center;">
                       <select style="height: 26px;" name="PaymentMode" [(ngModel)]="data.PaymentMode" #name="ngModel"
                         [ngModelOptions]="{standalone: true}" name="data.PaymentMode{{i}}"
