--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -32,11 +32,16 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <!-- <mat-form-field class="example-full-width mb-0">
+                        <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="inventory.SupplierID" editable="true" #singleSelect>
+                            <mat-option>
+                              <ngx-mat-select-search matInput [(ngModel)]="searchValue"
+                                (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                              </ngx-mat-select-search>
+                            </mat-option>
                             <mat-option [value]="0">All</mat-option>
-                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                            <mat-option *ngFor="let sup of supplierList  | supplierName: searchValue   let i = index;" [value]="sup.ID">
                               {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
                               </span>
                             </mat-option>
@@ -44,8 +49,8 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
-                        </mat-form-field> -->
-                        <mat-form-field class="example-full-width">
+                        </mat-form-field>
+                        <!-- <mat-form-field class="example-full-width">
                           <mat-label>Supplier Name</mat-label>
                           <input type="text" placeholder="serach Supplier" aria-label="Text" matInput name="SupplierID"
                             [formControl]="myControl" [matAutocomplete]="auto"
@@ -57,7 +62,7 @@
                               {{option.Name}} {{option.MobileNo1}}
                             </mat-option>
                           </mat-autocomplete>
-                        </mat-form-field>
+                        </mat-form-field> -->
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
